ingress_hostname_N_ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: 00.baidu.com
    http:
      paths:
      - backend:
          serviceName: twocontainer
          servicePort: 50
  
  - host: 80.baidu.com
    http:
      paths:
      - backend:
          serviceName: twocontainer
          servicePort: 80
          
  tls:
  - hosts:
    - 00.baidu.com
    secretName: nginx-test
