ingress_hostname_T.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: 50.baidu.com
    http:
      paths:
      - backend:
          serviceName: twocontainer
          servicePort: 50
  
  - host: 80.baidu.com
    http:
      paths:
      - backend:
          serviceName: twocontainer
          servicePort: 80
