ingress_path_T.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  annotations:
    kubernetes.io/ingress.class: traefik
    #traefik.frontend.rule.type: PathPrefixStrip
    #comments
spec:
  rules:
  - host: 00.baidu.com
    http:
      paths:
      - path: /five
        backend:
          serviceName: twocontainer
          servicePort: 50
      - path: /
        backend:
          serviceName: myapp-svc
          servicePort: 80
